--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,15 @@
 {
   "name": "openonetab",
-  "version": "0.0.0",
-  "dependencies": {},
+  "version": "0.0.1",
+  "dependencies": {
+    "angular": "1.2.15",
+    "angular-sanitize": "1.2.15",
+    "angular-animate": "1.2.15",
+    "angular-route": "1.2.15",
+    "angular-bootstrap": "0.10.0",
+    "jquery": "~2.0.3",
+    "bootstrap": "3.1.1",
+    "fontawesome": "4.0.3"
+  },
   "devDependencies": {}
 }
